Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113145

Gesture handlers crash due to misbehaving compositors

    XMLWordPrintable

Details

    • Linux/Wayland
    • 5587deee2 (dev), 6de503258 (6.5), e0fcd566c (6.6)

    Description

      I've got a report named "Random segfaults while switching desktop with gestures" with "Switch a few times to the left/right desktop using three-finger gestures." in reproduction steps on "Arch LInux, GNOME 43.3, Wayland". I haven't reproduce this myself (I have no such environment), but the crash dumps and the WAYLAND_DEBUG log make me think it was introduced with https://github.com/qt/qtwayland/commit/4ba3bd736e6ba1835a0b0b51d101101c39a58433. The code in _update and _end functions assumes mFocus is always set, but if _begin wasn't called (or _end was called previously), it's not set. This is probably a compositor bug, but I believe Qt can do a better job by just ignoring the events if mFocus is not set (or print some warning about compositor bug) rather than crashing.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidedmundson David Edmundson
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes